[tool.poetry]
name = "repl_nix_MDWB2"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Telethon = "^1.26.1"
aiofiles = "^22.1.0"
Flask = "^2.2.2"
Markdown = "^3.4.1"
pymongo = "^4.3.3"
Pyrogram = "^2.0.97"
requests = "^2.28.2"
telegraph = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
